<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/app_bg"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/cat_nav_writereviewback"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:background="@drawable/item_click"
            android:clickable="true"
            android:gravity="center"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/app_cancel"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#f5f5f5" />

        <LinearLayout
            android:layout_width="1dp"
            android:layout_height="fill_parent"
            android:background="#33B5E5" >
        </LinearLayout>

        <TextView
            android:id="@+id/cat_details_name3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:layout_weight="1"
            android:ellipsize="marquee"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="center"
            android:marqueeRepeatLimit="marquee_forever"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:text="@string/cat_details_name"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#f5f5f5" />

        <LinearLayout
            android:layout_width="1dp"
            android:layout_height="fill_parent"
            android:background="#33B5E5" >
        </LinearLayout>

        <TextView
            android:id="@+id/cat_nav_writereviewsend"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:paddingLeft="25dp"
            android:paddingRight="10dp"
            android:text="@string/app_send"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#f5f5f5" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="3dp"
        android:background="#33B5E5" >
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/cat_sumit_review"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@drawable/app_button_text_prim" />

        <LinearLayout
            android:id="@+id/review_ratingbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/item_click"
            android:clickable="true"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_margin="2dp"
                android:contentDescription="@string/cat_staron"
                android:src="@drawable/star" />

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_margin="2dp"
                android:contentDescription="@string/cat_staron"
                android:src="@drawable/star" />

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_margin="2dp"
                android:contentDescription="@string/cat_staron"
                android:src="@drawable/star" />

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_margin="2dp"
                android:contentDescription="@string/cat_staroff"
                android:src="@drawable/staroff" />

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_margin="2dp"
                android:contentDescription="@string/cat_staroff"
                android:src="@drawable/staroff" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dp"
            android:layout_marginTop="3dp"
            android:text="@string/cat_rating_msg"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@drawable/app_button_text_sec" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@drawable/white_fade" >
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp" >

            <CheckBox
                android:id="@+id/chkAnonymous"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:gravity="center"
                android:text="@string/cat_rating_anonymous"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@drawable/app_button_text_prim" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@drawable/white_fade" >
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:gravity="right|center_vertical"
                android:text="@string/cat_rating_title"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@drawable/app_button_text_prim" />

            <EditText
                android:id="@+id/write_review_title"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:hint="@string/cat_rating_title_hint"
                android:inputType="textPersonName"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@drawable/white_fade" >
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:orientation="vertical" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/cat_rating_review"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@drawable/app_button_text_prim" />

            <EditText
                android:id="@+id/write_review_text"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:gravity="top"
                android:hint="@string/cat_rating_review_hint"
                android:lines="5"
                android:singleLine="false"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>