<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/app_bg"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tvBack"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:background="@drawable/item_click"
            android:clickable="true"
            android:gravity="center"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/strBack"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#f5f5f5" />

        <LinearLayout
            android:layout_width="1dp"
            android:layout_height="fill_parent"
            android:background="#33B5E5" >
        </LinearLayout>

        <TextView
            android:id="@+id/tvNotDetailTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:layout_weight="1"
            android:ellipsize="marquee"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="center"
            android:marqueeRepeatLimit="marquee_forever"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:text="@string/strNotificationTitle"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#f5f5f5" />

        <LinearLayout
            android:layout_width="1dp"
            android:layout_height="fill_parent"
            android:background="#33B5E5"
            android:visibility="invisible" >
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:paddingLeft="12dp"
            android:paddingRight="10dp"
            android:text="@string/app_next"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#f5f5f5"
            android:visibility="invisible" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="3dp"
        android:background="#33B5E5" >
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:layout_margin="5dp"
        android:gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/butCall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.6"
            android:drawableLeft="@drawable/call"
            android:text="@string/strCall" />

        <Button
            android:id="@+id/butEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.6"
            android:drawableLeft="@drawable/edit"
            android:text="@string/strEdit" />

        <Button
            android:id="@+id/butInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.6"
            android:drawableLeft="@drawable/info"
            android:text="@string/strInfo" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@drawable/white_fade" >
    </LinearLayout>

    <ListView
        android:id="@+id/list_not_message"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:cacheColorHint="@android:color/transparent"
        android:divider="@drawable/divider"
        android:dividerHeight="0.5dp" >
    </ListView>

    <TextView
        android:id="@+id/notification_empty"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center"
        android:text="@string/noti_no_message"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@drawable/app_button_text_prim" />

</LinearLayout>