<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/app_bg"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/cat_nav_catback"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:background="@drawable/item_click"
            android:clickable="true"
            android:gravity="center"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/app_back"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#f5f5f5" />

        <LinearLayout
            android:layout_width="1dp"
            android:layout_height="fill_parent"
            android:background="#33B5E5" >
        </LinearLayout>

        <TextView
            android:id="@+id/cat_category_name"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/cat_movie"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#f5f5f5" />

        <LinearLayout
            android:layout_width="1dp"
            android:layout_height="fill_parent"
            android:background="#33B5E5"
            android:visibility="invisible" >
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:paddingLeft="12dp"
            android:paddingRight="10dp"
            android:text="@string/app_next"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#f5f5f5"
            android:visibility="invisible" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="3dp"
        android:background="#33B5E5" >
    </LinearLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/searchtext_category_item"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:hint="@string/search_hint"
            android:inputType="textPersonName"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <ImageView
            android:layout_width="42dp"
            android:layout_height="41dp"
            android:layout_marginTop="1dp"
            android:layout_toRightOf="@+id/searchtext_category_item"
            android:clickable="true"
            android:contentDescription="@string/cat_favourite"
            android:src="@drawable/search" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@drawable/white_fade" >
    </LinearLayout>

    <ListView
        android:id="@+id/cat_listitem"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:cacheColorHint="@android:color/transparent"
        android:divider="@drawable/divider"
        android:dividerHeight="0.5dp" >
    </ListView>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@drawable/white_fade" >
    </LinearLayout>

    <LinearLayout
        android:id="@+id/cat_contibute"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:background="@drawable/item_click"
        android:clickable="true"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_weight="0.1"
            android:text="@string/cat_contibute_text"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#f5f5f5" />

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="20dp"
            android:layout_margin="5dp"
            android:layout_weight="0.9"
            android:contentDescription="@string/cat_contibute_text"
            android:src="@drawable/plus" />
    </LinearLayout>

</LinearLayout>